Fix - dark mode circle (#507)

--- a/packages/components/components/color/ColorSelector.scss
+++ b/packages/components/components/color/ColorSelector.scss
@@ -38,7 +38,7 @@
     border-radius: 50%;
     z-index: 2;
     background: currentColor;
-    border: 2px solid white;
+    border: 2px solid var(--bgcolor-main-area, white);
     pointer-events: none;
     transition: border .1s ease-out;
 }
